--- a/Spring 2026/PHYS 6347 Quantum Network and Communication/mainQN.tex
+++ b/Spring 2026/PHYS 6347 Quantum Network and Communication/mainQN.tex
@@ -1,6 +1,6 @@
 \documentclass[10pt,twocolumn]{article}
 
-\input{template}
+\input{../Template/template}
 
 % ---------- Course metadata ----------
 \newcommand{\CourseName}{Quantum Mechanics II}
