--- a/Spring 2026/PHYS 5v48 Intro. to QFT/mainQFT.tex
+++ b/Spring 2026/PHYS 5v48 Intro. to QFT/mainQFT.tex
@@ -50,6 +50,6 @@
 \endgroup
 
 % ---------- Lecture Notes ----------
-\input{notes}
+\input{../PHYS 5v48 Intro. to QFT/notes/Lecture_1.tex}
 
 \end{document}
