Updates from Overleaf

--- a/Spring 2026/PHYS_5v48_QFT/mainQFT.tex
+++ b/Spring 2026/PHYS_5v48_QFT/mainQFT.tex
@@ -50,6 +50,6 @@
 \endgroup
 
 % ---------- Lecture Notes ----------
-\input{../PHYS 5v48 Intro. to QFT/notes/Lecture_1.tex}
+\input{../PHYS_5v48_QFT/notes/Lecture_1}
 
 \end{document}
