Update lecture notes (2025-12-26 03:15)

--- a/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
+++ b/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
@@ -1,6 +1,8 @@
 \begin{presection}{Recall Berry phases from adiabatic evolution.
 Think about gauge dependence vs gauge invariance.}
 
+\end{presection}
+
 \begin{remarkbar}
 
 Berry-phase quantities often look gauge-dependent at first glance,
@@ -65,3 +67,5 @@ is invariant under \( \mathbf A_n \to \mathbf A_n + \nabla_{\mathbf k}\phi \).
 
 \begin{postsection}{Berry curvature plays the role of a magnetic field in momentum space.
 Its integral over the Brillouin zone gives a Chern number.}
+
+\end{postsection}
