Updates from Overleaf

--- a/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
+++ b/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
@@ -1,5 +1,9 @@
-\begin{presection}{Recall Berry phases from adiabatic evolution.
-Think about gauge dependence vs gauge invariance.}
+\begin{presection}{Recall Berry phases from adiabatic evolution}
+
+Think about gauge dependence vs gauge invariance.
+
+\end{presection}
+
 
 \begin{remarkbar}
 
@@ -13,22 +17,18 @@ but physical observables must be invariant.
 \subsection{Berry Connection}
 
 \begin{derivation}
-
 \mathbf A_n(\mathbf k)
 = i \langle u_n(\mathbf k) | \nabla_{\mathbf k} | u_n(\mathbf k) \rangle
-
 \end{derivation}
 
 \begin{equation}
-
 \Omega_n(\mathbf k)
 = \nabla_{\mathbf k} \times \mathbf A_n(\mathbf k)
-
 \end{equation}
 
 \begin{center}
 
-\includegraphics[width=0.6\linewidth]{../figures/1.png}
+\includegraphics[width=0.6\linewidth]{figures/1.png}
 
 \captionof{figure}{Berry curvature as an effective magnetic field in momentum space.}
 
@@ -63,5 +63,9 @@ is invariant under \( \mathbf A_n \to \mathbf A_n + \nabla_{\mathbf k}\phi \).
 
 \end{exercise}
 
-\begin{postsection}{Berry curvature plays the role of a magnetic field in momentum space.
-Its integral over the Brillouin zone gives a Chern number.}
+\begin{postsection}{Berry curvature as an effective magnetic field}
+
+Berry curvature plays the role of a magnetic field in momentum space.
+Its integral over the Brillouin zone gives a Chern number.
+
+\end{postsection}
