Updates from Overleaf

--- a/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
+++ b/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
@@ -1,6 +1,5 @@
-\begin{presection}{Recall Berry phases from adiabatic evolution.
-Think about gauge dependence vs gauge invariance.}
-
+\begin{presection}Recall Berry phases from adiabatic evolution.
+Think about gauge dependence vs gauge invariance.
 \end{presection}
 
 \begin{remarkbar}
@@ -47,8 +46,8 @@ Show explicitly that \(\Omega_n = \nabla_{\mathbf k} \times \mathbf A_n\)
 is invariant under \( \mathbf A_n \to \mathbf A_n + \nabla_{\mathbf k}\phi \).
 \end{exercise}
 
-\begin{postsection}{Berry curvature plays the role of a magnetic field in momentum space.
+\begin{postsection} 
+{Berry curvature plays the role of a magnetic field in momentum space.
 Its integral over the Brillouin zone gives a Chern number.}
-
 \end{postsection}
 
