Update lecture notes (2025-12-26 04:00)

--- a/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
+++ b/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
@@ -16,10 +16,9 @@ Level crossings invalidate Berry-phase arguments.
 \subsection{Adiabatic Theorem Review}
 
 \begin{derivation}
-Consider a Hamiltonian $H(\lambda(t))$ with instantaneous eigenstates
-$H(\lambda)|n(\lambda)\rangle = E_n(\lambda)|n(\lambda)\rangle$.
-
-Assume slow evolution such that transitions are suppressed.
+Consider a Hamiltonian $H(\lambda(t))$ with instantaneous eigenstates \\
+$H(\lambda)|n(\lambda)\rangle = E_n(\lambda)|n(\lambda)\rangle$. \\
+\text{Assume slow evolution such that transitions are suppressed.}
 \end{derivation}
 
 \begin{equation}
@@ -38,8 +37,8 @@ while the geometric phase depends only on the path.
 \subsection{Berry Connection and Curvature}
 
 \begin{derivation}
-\mathbf A_n(\mathbf k)
-=
+\mathbf A_n(\mathbf k) \\
+= \\
 i\langle u_n(\mathbf k)|\nabla_{\mathbf k}|u_n(\mathbf k)\rangle
 \end{derivation}
 
