--- a/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
+++ b/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
@@ -16,7 +16,7 @@ Level crossings invalidate Berry-phase arguments.
 \subsection{Adiabatic Theorem Review}
 
 \begin{derivation}
-Consider a Hamiltonian $H(\lambda(t))$ with instantaneous eigenstates \\
+\text{Consider a Hamiltonian $H(\lambda(t))$ with instantaneous eigenstates} \\
 $H(\lambda)|n(\lambda)\rangle = E_n(\lambda)|n(\lambda)\rangle$. \\
 \text{Assume slow evolution such that transitions are suppressed.}
 \end{derivation}
@@ -37,9 +37,9 @@ while the geometric phase depends only on the path.
 \subsection{Berry Connection and Curvature}
 
 \begin{derivation}
-\mathbf A_n(\mathbf k) \\
+\text{\mathbf A_n(\mathbf k)} \\
 = \\
-i\langle u_n(\mathbf k)|\nabla_{\mathbf k}|u_n(\mathbf k)\rangle
+\text{i\langle u_n(\mathbf k)|\nabla_{\mathbf k}|u_n(\mathbf k)\rangle}
 \end{derivation}
 
 \begin{equation}
