Update lecture notes (2025-12-26 04:03)

--- a/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
+++ b/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
@@ -37,9 +37,9 @@ while the geometric phase depends only on the path.
 \subsection{Berry Connection and Curvature}
 
 \begin{derivation}
-\text{\mathbf A_n(\mathbf k)} \\
+\mathbf A_n(\mathbf k) \\
 = \\
-\text{i\langle u_n(\mathbf k)|\nabla_{\mathbf k}|u_n(\mathbf k)\rangle}
+i\langle u_n(\mathbf k)|\nabla_{\mathbf k}|u_n(\mathbf k)\rangle
 \end{derivation}
 
 \begin{equation}
