--- a/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
+++ b/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
@@ -37,8 +37,8 @@ while the geometric phase depends only on the path.
 \subsection{Berry Connection and Curvature}
 
 \begin{derivation}
-\mathbf A_n(\mathbf k) \\
-= \\
+\mathbf A_n(\mathbf k)
+=
 i\langle u_n(\mathbf k)|\nabla_{\mathbf k}|u_n(\mathbf k)\rangle
 \end{derivation}
 
