Update lecture notes (2025-12-26 18:53)

--- a/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
+++ b/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
@@ -18,16 +18,14 @@ Level crossings invalidate Berry-phase arguments.
 \begin{derivation}
 \text{Consider a Hamiltonian $H(\lambda(t))$ with instantaneous eigenstates} \\
 $H(\lambda)|n(\lambda)\rangle = E_n(\lambda)|n(\lambda)\rangle$. \\
-\text{Assume slow evolution such that transitions are suppressed.}
-\end{derivation}
-
-\begin{equation}
-|\psi(t)\rangle
-=
-e^{i\gamma_n(t)}
-e^{-\frac{i}{\hbar}\int_0^t E_n(t')dt'}
+\text{Assume slow evolution such that transitions are suppressed.} \\
+E: \\
+|\psi(t)\rangle \\
+= \\
+e^{i\gamma_n(t)} \\
+e^{-\frac{i}{\hbar}\int_0^t E_n(t')dt'} \\
 |n(t)\rangle
-\end{equation}
+\end{derivation}
 
 \begin{remarkbar}
 The dynamical phase depends on time,
@@ -40,13 +38,11 @@ while the geometric phase depends only on the path.
 \mathbf A_n(\mathbf k)
 =
 i\langle u_n(\mathbf k)|\nabla_{\mathbf k}|u_n(\mathbf k)\rangle
-\end{derivation}
-
-\begin{equation}
+E:
 \Omega_n(\mathbf k)
 =
 \nabla_{\mathbf k}\times\mathbf A_n(\mathbf k)
-\end{equation}
+\end{derivation}
 
 \begin{center}
 \includegraphics[width=0.6\linewidth]{figures/1.png}
