Updates from Overleaf

--- a/Spring 2026/PHYS_5v48_QFT/mainQFT.tex
+++ b/Spring 2026/PHYS_5v48_QFT/mainQFT.tex
@@ -3,11 +3,15 @@
 \input{../Template/template}
 
 % ---------- Course metadata ----------
+% ---------- Course metadata ----------
 \newcommand{\CourseName}{Quantum Mechanics II}
-\newcommand{\LectureTitle}{Lecture 5 -- Path Integrals}
 \newcommand{\CourseCode}{PHYS 6301}
 \newcommand{\Term}{Fall 2025}
 \newcommand{\Professor}{Prof.\ Mark Lee}
+
+% Defaults (used if compiler doesn't override)
+\newcommand{\LectureTitle}{}
+\newcommand{\LectureDate}{}
 
 % ---------- Title ----------
 \title{
@@ -23,7 +27,7 @@
   \University \\
 }
 
-\date{Jan. 20th, 2026}
+\date{\LectureDate}
 
 \begin{document}
 
