Update lecture notes (2025-12-26 18:57)

--- a/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
+++ b/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
@@ -47,13 +47,13 @@ E:
 \begin{center}
 \includegraphics[width=0.6\linewidth]{figures/1.png}
 \captionof{figure}{Berry curvature visualized as a magnetic field in momentum space.}
-\label{fig:F25-L6-1}
+\label{fig:1}
 \end{center}
 
 \begin{center}
 \includegraphics[width=0.6\linewidth]{figures/2.png}
 \captionof{figure}{Parallel transport of quantum states around a closed loop in parameter space.}
-\label{fig:F25-L6-2}
+\label{fig:2}
 \end{center}
 
 \begin{theorem}
