Update lecture notes (2025-12-26 19:06)

--- a/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
+++ b/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
@@ -20,11 +20,11 @@ Level crossings invalidate Berry-phase arguments.
 $H(\lambda)|n(\lambda)\rangle = E_n(\lambda)|n(\lambda)\rangle$. \\
 \text{Assume slow evolution such that transitions are suppressed.} \\
 E: \\
-|\psi(t)\rangle \\
+\text{|\psi(t)\rangle} \\
 = \\
 e^{i\gamma_n(t)} \\
 e^{-\frac{i}{\hbar}\int_0^t E_n(t')dt'} \\
-|n(t)\rangle
+\text{|n(t)\rangle}
 \end{derivation}
 
 \begin{remarkbar}
