--- a/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
+++ b/Spring 2026/PHYS_5v48_QFT/notes/notes.tex
@@ -18,14 +18,16 @@ Level crossings invalidate Berry-phase arguments.
 \begin{derivation}
 \text{Consider a Hamiltonian $H(\lambda(t))$ with instantaneous eigenstates} \\
 $H(\lambda)|n(\lambda)\rangle = E_n(\lambda)|n(\lambda)\rangle$. \\
-\text{Assume slow evolution such that transitions are suppressed.} \\
-E: \\
-\text{|\psi(t)\rangle} \\
-= \\
-e^{i\gamma_n(t)} \\
-e^{-\frac{i}{\hbar}\int_0^t E_n(t')dt'} \\
-\text{|n(t)\rangle}
+\text{Assume slow evolution such that transitions are suppressed.}
 \end{derivation}
+
+\begin{equation}
+|\psi(t)\rangle
+=
+e^{i\gamma_n(t)}
+e^{-\frac{i}{\hbar}\int_0^t E_n(t')dt'}
+|n(t)\rangle
+\end{equation}
 
 \begin{remarkbar}
 The dynamical phase depends on time,
