--- a/Spring 2026/PHYS_5v48_QFT/notes/meta.tex
+++ b/Spring 2026/PHYS_5v48_QFT/notes/meta.tex
@@ -1,3 +1,3 @@
 % Auto-generated — do not edit
 \renewcommand{\LectureTitle}{Lecture 6 -- Path Integrals}
-\date{12/25/25}
+\renewcommand{\LectureDate}{Dec. 25, 2025}
