Updates from Overleaf

--- a/Spring 2026/PHYS_5v48_QFT/mainQFT.tex
+++ b/Spring 2026/PHYS_5v48_QFT/mainQFT.tex
@@ -3,15 +3,17 @@
 \input{../Template/template}
 
 % ---------- Course metadata ----------
-% ---------- Course metadata ----------
 \newcommand{\CourseName}{Quantum Mechanics II}
 \newcommand{\CourseCode}{PHYS 6301}
 \newcommand{\Term}{Fall 2025}
 \newcommand{\Professor}{Prof.\ Mark Lee}
 
-% Defaults (used if compiler doesn't override)
+% ---------- Defaults (compiler may override) ----------
 \newcommand{\LectureTitle}{}
 \newcommand{\LectureDate}{}
+
+% ---------- Compiler-generated metadata ----------
+\input{../PHYS_5v48_QFT/notes/meta}
 
 % ---------- Title ----------
 \title{
@@ -24,7 +26,7 @@
   \ProfessorName \\
   \StudentName \\
   \Department \\
-  \University \\
+  \University
 }
 
 \date{\LectureDate}
