--- a/Spring 2026/PHYS_5v48_QFT/mainQFT.tex
+++ b/Spring 2026/PHYS_5v48_QFT/mainQFT.tex
@@ -3,10 +3,10 @@
 \input{../Template/template}
 
 % ---------- Course metadata ----------
-\newcommand{\CourseName}{Quantum Mechanics II}
-\newcommand{\CourseCode}{PHYS 6301}
-\newcommand{\Term}{Fall 2025}
-\newcommand{\Professor}{Prof.\ Mark Lee}
+\newcommand{\CourseName}{Intro. to QFT}
+\newcommand{\CourseCode}{PHYS 5v48}
+\newcommand{\Term}{Spring 2026}
+\newcommand{\Professor}{Given by: Prof.\ Mohammad Akbar}
 
 % ---------- Defaults (compiler may override) ----------
 \newcommand{\LectureTitle}{}
@@ -23,7 +23,7 @@
 }
 
 \author{
-  \ProfessorName \\
+  \Professor \\
   \StudentName \\
   \Department \\
   \University
