--- a/Spring 2026/PHYS 6301 Quantum Mechanics II/mainQM2.tex
+++ b/Spring 2026/PHYS 6301 Quantum Mechanics II/mainQM2.tex
@@ -4,10 +4,16 @@
 
 % ---------- Course metadata ----------
 \newcommand{\CourseName}{Quantum Mechanics II}
-\newcommand{\LectureTitle}{Lecture 5 -- Path Integrals}
 \newcommand{\CourseCode}{PHYS 6301}
-\newcommand{\Term}{Fall 2025}
-\newcommand{\Professor}{Prof.\ Mark Lee}
+\newcommand{\Term}{Spring 2026}
+\newcommand{\Professor}{Given by: Prof.\ Yuri Gartstein}
+
+% ---------- Defaults (compiler may override) ----------
+\newcommand{\LectureTitle}{}
+\newcommand{\LectureDate}{}
+
+% ---------- Compiler-generated metadata ----------
+\input{../PHYS 6301 Quantum Mechanics II/notes/meta}
 
 % ---------- Title ----------
 \title{
@@ -17,13 +23,13 @@
 }
 
 \author{
-  \ProfessorName \\
+  \Professor \\
   \StudentName \\
   \Department \\
-  \University \\
+  \University
 }
 
-\date{Jan. 20th, 2026}
+\date{\LectureDate}
 
 \begin{document}
 
@@ -50,6 +56,6 @@
 \endgroup
 
 % ---------- Lecture Notes ----------
-\input{notes}
+\input{../PHYS_5v48_QFT/notes/notes}
 
 \end{document}
