--- a/Spring 2026/PHYS 6347 Quantum Network and Communication/mainQN.tex
+++ b/Spring 2026/PHYS 6347 Quantum Network and Communication/mainQN.tex
@@ -3,11 +3,17 @@
 \input{../Template/template}
 
 % ---------- Course metadata ----------
-\newcommand{\CourseName}{Quantum Mechanics II}
-\newcommand{\LectureTitle}{Lecture 5 -- Path Integrals}
-\newcommand{\CourseCode}{PHYS 6301}
-\newcommand{\Term}{Fall 2025}
-\newcommand{\Professor}{Prof.\ Mark Lee}
+\newcommand{\CourseName}{Quantum Network and Communication}
+\newcommand{\CourseCode}{PHYS 6347}
+\newcommand{\Term}{Spring 2026}
+\newcommand{\Professor}{Given by: Prof.\ Bei Zeng}
+
+% ---------- Defaults (compiler may override) ----------
+\newcommand{\LectureTitle}{}
+\newcommand{\LectureDate}{}
+
+% ---------- Compiler-generated metadata ----------
+\input{../PHYS 6347 Quantum Network and Communication/notes/meta}
 
 % ---------- Title ----------
 \title{
@@ -17,13 +23,13 @@
 }
 
 \author{
-  \ProfessorName \\
+  \Professor \\
   \StudentName \\
   \Department \\
-  \University \\
+  \University
 }
 
-\date{Jan. 20th, 2026}
+\date{\LectureDate}
 
 \begin{document}
 
@@ -50,6 +56,6 @@
 \endgroup
 
 % ---------- Lecture Notes ----------
-\input{notes}
+\input{../PHYS_5v48_QFT/notes/notes}
 
 \end{document}
