--- a/Spring 2026/PHYS 6347 Quantum Network and Communication/notes/notes.tex
+++ b/Spring 2026/PHYS 6347 Quantum Network and Communication/notes/notes.tex
@@ -49,13 +49,13 @@ E:
 \begin{center}
 \includegraphics[width=0.6\linewidth]{figures/1.png}
 \captionof{figure}{Berry curvature visualized as a magnetic field in momentum space.}
-\label{fig:1}
+\label{fig:None-1}
 \end{center}
 
 \begin{center}
 \includegraphics[width=0.6\linewidth]{figures/2.png}
 \captionof{figure}{Parallel transport of quantum states around a closed loop in parameter space.}
-\label{fig:2}
+\label{fig:None-2}
 \end{center}
 
 \begin{theorem}
